2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (xpow, elem_xpow): Don't do redundant real->complex
	conversions.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc: Substitute OCTAVE_QUIT -> octave_quit ().
	* input.cc: Ditto.
	* ls-mat-ascii.cc: Ditto.
	* oct-stream.cc: Ditto.
	* ov-base-int.cc: Ditto.
	* ov-base-sparse.cc: Ditto.
	* ov-bool-sparse.cc: Ditto.
	* ov-cell.cc: Ditto.
	* ov-cx-sparse.cc: Ditto.
	* ov-flt-re-mat.cc: Ditto.
	* ov-re-mat.cc: Ditto.
	* ov-re-sparse.cc: Ditto.
	* pr-output.cc: Ditto.
	* pt-eval.cc: Ditto.
	* pt-mat.cc: Ditto.
	* sighandlers.cc: Ditto.
	* sparse-xdiv.cc: Ditto.
	* sparse-xpow.cc: Ditto.
	* toplev.cc: Ditto.
	* utils.cc: Ditto.
	* xdiv.cc: Ditto.
	* xpow.cc: Ditto.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/bsxfun.cc: New tests.

2010-01-20  David Bateman  <dbateman@free.fr>

	* graphics.h.in (string_array_property): New property.
	(axes::properties): Use it here for the linestyleorder property.
	Remove the markerorder property.
	* genprops.awk: Emit string_array_property

2010-01-19  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/strfind.cc: Optimize searching for 1 or 2 characters.

2010-01-18  John W. Eaton  <jwe@octave.org>

	* oct-parse.yy (fcn_end): Allow EOF as end of function if
	reading from eval string.
	(eval_string): Protect and set reading_fcn_file,
	reading_script_file, and reading_classdef_file.

2010-01-18  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (xpow (const NDArray&, double), xpow (const FloatNDArray&,
	float)): Optimize also the x.^3 case.

2010-01-18  David Grundberg  <davidg@cs.umu.se>

	* mex.cc (mexPrintf): Change signature.
	* mexproto.h (mexPrintf): Dito.

2010-01-18  David Grundberg  <davidg@cs.umu.se>

	* mexproto.h (mxSetDimensions): Change signature.
	* mex.cc (mxSetDimensions): Dito.

2010-01-17  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellslices): Support dim argument, make